@@ -1,4 +1,5 @@
 5.3.0 -> 5.4a1:
+    - jbj: hkp: retrofit macro madness disablers for hkp:// lookups.
     - jbj: hkp: permit string lookups.
     - jbj: iob: increase max. buffer from 256Kb to 1Mb for pubkeys.
     - jbj: hkp: add a rpmhkp object to manage hkp:// pubkey lookup/validate.
